# qibutton

./: .gitignore  CMakeLists.txt  README.md  ds1922.cpp  ds1922.h  ds9490.cpp  ds9490.h  qibutton.kdev4
.kdev4/: _custom.kdev4  qibutton.kdev4
cli/: CMakeLists.txt  main.cpp
config/: 24_ibutton.rules  ds2490-blacklist.conf
gui/: CMakeLists.txt  about.ui  main.cpp  main.ui  mainwindow.cpp  mainwindow.h
